IPC Module tested and working

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,44 @@
 *.exe
 *.elf
 */testing/*
-*.pdf
-*.gz
-*.out
+
+##################
+##	        VIVADO            ##
+##################
+
+##Source files:
+
+!*.srcs/
+
+##################
+
+*.sim/
+*.hw/
+*.cache/
+*.ip_user_files/
+*.runs/
+
+##################
+
+*vivado*
 *.log
+*.jou
 *.zip
+
+##################
+
+##################
+##	         LATEX             ##
+##################
+
 *.aux
 *.lof
-*.xcode*
-*.bin
+*.log
+*.lot
+*.fls
+*.out
+*.toc
+*.pdf
+*.bbl
+*.blg
+*.synctex.gz
